<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Video Extractor</string>
    <string name="IOException_text">Connection error</string>
    <string name="bad_url_text">Bad url</string>
    <string name="video_not_embeddable_text">Video is not embeddable.</string>
    <string name="domain_not_supported_text">Domain not supported</string>
    <string name="no_compatible_apps">No compatible apps</string>

    <string name="button_history">History</string>
    <string name="button_clear_history">Clear History</string>
    <string name="button_favourites">Favourites</string>
    <string name="button_clear_favourites">Clear Favourites</string>

    <string name="history_cleared">History cleared</string>
    <string name="favourites_cleared">Favourites cleared</string>
</resources>
