<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_history"
            android:id="@+id/buttonHistory" android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_history"
            android:id="@+id/buttonClearHistory" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
    />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/button_favourites" android:id="@+id/buttonFavourites"
            android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/button_clear_favourites" android:id="@+id/buttonClearFavourites"
            android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"/>
</LinearLayout>